--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                      hover:bg-primaryBtnClor text-xl
                     text-neutral-50 rounded-lg 
                     tracking-widest normal-case
-                    " id="coupn-text" title="Copy to Clipboard"  href="#cuponLocation">SELL200</a>
+                    " id="coupn-text" title="Copy to Clipboard" href="#cuponLocation">SELL200</a>
                 </div>
             </div>
 
@@ -52,20 +52,30 @@
                      hover:bg-primaryBtnClor text-xl
                     text-neutral-50 rounded-lg 
                     tracking-widest normal-case
-                    " id="coupnText2" title="Copy to Clipboard"  href="#cuponLocation">SELL200</a>
+                    " id="coupnText2" title="Copy to Clipboard" href="#cuponLocation">SELL200</a>
             </div>
         </div>
     </header>
 
-    <main class="container sm:container md:container lg:container xl:container 2xl:container mx-auto px-4">
+    <main class="container sm:container 
+    md:container lg:container xl:container 
+    2xl:container mx-auto px-4">
         <!-- produact section -->
-        <section class="flex flex-col flex-col-reverse xl:flex-row justify-center gap-5  lg:my-20 md:mb-28">
+        <section class="flex  
+        flex-col-reverse xl:flex-row 
+        justify-center gap-5  lg:my-20
+        md:mb-28">
 
 
             <!-- group product -->
-            <div class="flex items-center xl:items-start flex-col">
-                <h2 class="text-productTitleSize font-semibold my-8">Kitchenware</h2>
-                <div class="grupPdoducts flex justify-center flex-col flex-wrap sm:flex-row lg:flex-nowrap gap-4">
+            <div class="flex items-center 
+            xl:items-start flex-col">
+                <h2 class="text-productTitleSize 
+                font-semibold my-8">Kitchenware</h2>
+                <div class="grupPdoducts flex 
+                justify-center flex-col 
+                flex-wrap sm:flex-row 
+                lg:flex-nowrap gap-4">
                     <!-- product 1 -->
                     <div class="card bg-whiteColor p-5">
                         <figure class="px-10 pt-10 bg-productBgColor w-72  rounded-md">
@@ -131,11 +141,16 @@
                 </div>
 
                 <!-- group section -->
-                <h2 class="text-productTitleSize font-semibold my-8">Sportswear</h2>
-                <div class="grupPdoducts flex justify-center flex-col flex-wrap sm:flex-row lg:flex-nowrap gap-4">
+                <h2 class="text-productTitleSize
+                font-semibold my-8">Sportswear</h2>
+                <div class="grupPdoducts flex
+                justify-center flex-col flex-wrap
+                sm:flex-row lg:flex-nowrap gap-4">
                     <!-- product 1 -->
                     <div class="card bg-whiteColor p-5">
-                        <figure class="px-10 pt-10 bg-productBgColor w-72 rounded-md">
+                        <figure class="px-10 pt-10
+                        bg-productBgColor w-72
+                        rounded-md">
                             <img src="./images/prod4.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
@@ -156,10 +171,14 @@
 
                     <!-- product 2 -->
                     <div class="card bg-whiteColor p-5">
-                        <figure class="px-10 pt-10 bg-productBgColor w-72 rounded-md">
+                        <figure class="px-10 pt-10
+                        bg-productBgColor w-72
+                        rounded-md">
                             <img src="./images/prod5.png" alt="Shoes" class="rounded-xl" />
                         </figure>
-                        <div class="card-body items-center text-center">
+                        <div class="card-body
+                        items-center
+                        text-center">
 
                             <div class="rating">
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-reatingStarColor" />
@@ -177,7 +196,9 @@
 
                     <!-- product 3 -->
                     <div class="card bg-whiteColor p-5">
-                        <figure class="px-10 pt-10 bg-productBgColor rounded-md w-72">
+                        <figure class="px-10 pt-10
+                        bg-productBgColor
+                        rounded-md w-72">
                             <img src="./images/prod6.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
@@ -197,11 +218,17 @@
                     </div>
                 </div>
                 <!-- group section -->
-                <h2 class="text-productTitleSize font-semibold my-8">Furniture</h2>
-                <div class="grupPdoducts flex justify-center flex-col flex-wrap sm:flex-row lg:flex-nowrap gap-4">
+                <h2 class="text-productTitleSize
+                font-semibold my-8">Furniture</h2>
+                <div class="grupPdoducts
+                flex justify-center flex-col
+                flex-wrap sm:flex-row
+                lg:flex-nowrap gap-4">
                     <!-- product 1 -->
-                    <div class="card bg-whiteColor p-5">
-                        <figure class="px-10 pt-10 bg-productBgColor w-72 rounded-md">
+                    <div class="cardbg-whiteColor p-5">
+                        <figure class="px-10 pt-10 
+                        bg-productBgColor w-72 
+                        rounded-md">
                             <img src="./images/prod7.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
@@ -222,7 +249,9 @@
 
                     <!-- product 2 -->
                     <div class="card bg-whiteColor p-5">
-                        <figure class="px-10 pt-10 bg-productBgColor w-72 rounded-md">
+                        <figure class="px-10 pt-10
+                        bg-productBgColor w-72
+                        rounded-md">
                             <img src="./images/prod8.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
@@ -243,11 +272,12 @@
 
                     <!-- product 3 -->
                     <div class="card bg-whiteColor p-5">
-                        <figure class="px-10 pt-10 bg-productBgColor rounded-md w-72">
+                        <figure class="px-10 pt-10
+                        bg-productBgColor w-72 
+                        rounded-md ">
                             <img src="./images/prod9.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
-
                             <div class="rating">
                                 <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor" />
                                 <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor"
@@ -256,7 +286,6 @@
                                 <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor" />
                                 <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor" />
                             </div>
-
                             <h2 class="card-title">K. Accessories</h2>
                             <p class="text-xl font-normal"><span>39.00 TK</span></p>
                         </div>
@@ -264,26 +293,29 @@
                 </div>
             </div>
 
-            <div id="cuponLocation" class="mt-32 flex flex-wrap xl:block xl:bg-bodyBgColor bg-whiteColor justify-center items-center">
+            <div id="cuponLocation" class="mt-32 flex flex-wrap 
+            xl:block xl:bg-bodyBgColor bg-whiteColor 
+            justify-center items-center">
                 <div class="bg-whiteColor p-6 rounded-lg">
                     <h3 class="text-2xl font-medium mb-5">Have coupon?</h3>
                     <div class="text-center lg:w-80  ">
                         <input class="text-xl p-2 border border-borderColor
-                        focus:outline-none font-normal w-48 lg:w-56 rounded-l-lg -ml-4" placeholder="Coupon code"
-                            type="text" id="coupon-code">
-                        <input class="
-                        capitalize
-                        btn rounded-l-none
+                        focus:outline-none font-normal w-48 lg:w-56 
+                        rounded-l-lg -ml-4" placeholder="Coupon code" type="text" id="coupon-code">
+                        <input class="capitalize
+                        btn rounded-l-none border
                         hover:bg-primaryBtnClor
-                          border border-primaryBtnClor 
-                        text-xl font-semibold -ml-2 bg-primaryBtnClor 
+                        border-primaryBtnClor 
+                        text-xl font-semibold -ml-2 
+                        bg-primaryBtnClor 
                         text-whiteColor rounded-r-lg" id="copunApplyBtn" type="button" value="Apply">
                     </div>
 
                 </div>
-                <div class="bg-whiteColor mt-5 p-6 rounded-lg text-2xl font-medium">
-                    <ol id="selectedTitle" class="list-decimal list-inside border-b 
-                    border-borderColor mb-6 pb-6 hidden">
+                <div class="bg-whiteColor mt-5 
+                p-6 rounded-lg text-2xl font-medium">
+                    <ol id="selectedTitle" class="list-decimal list-inside 
+                    border-b border-borderColor mb-6 pb-6 hidden">
                         <li>Coffee</li>
                         <li>Tea</li>
                         <li>Milk</li>
@@ -291,7 +323,8 @@
                     <div class="" id="cardPrice">
                         <p>Total price: <span class="text-tkTextColor">257.00 TK</span></p>
                         <p>Discount : <span class="text-tkTextColor">51.40 TK</span></p>
-                        <p class="border-b border-borderColor pb-6">Total: <span class="text-tkTextColor">51.40
+                        <p class="border-b 
+                        border-borderColor pb-6">Total: <span class="text-tkTextColor">51.40
                                 TK</span></p>
 
                         <label for="my_modal_6" class="btn bg-primaryBtnClor 
@@ -365,8 +398,12 @@
                 <p class="py-4 text-xl font-normal">Your Purchase the product</p>
             </div>
             <div class="modal-action justify-center">
-                <label for="my_modal_6" id="gotHome" class="btn bg-primaryBtnClor hover:bg-primaryBtnClor
-      text-neutral-50 text-xl rounded-lg tracking-widest capitalize">Go Home</label>
+                <label for="my_modal_6" id="gotHome" class="
+                btn bg-primaryBtnClor 
+                hover:bg-primaryBtnClor
+                text-neutral-50 text-xl 
+                rounded-lg tracking-widest 
+                capitalize">Go Home</label>
             </div>
         </div>
     </div>
