some responsive style

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="md:flex justify-center items-center hidden">
                     <h3 class="text-2xl font-medium  lg:mr-4 mr-1">Use Promo Code</h3>
                     <a class="btn bg-primaryBtnClor
-                     hover:bg-primaryBtnClor text-xl
+                     hover:bg-primaryBtnClor text-base xl:text-xl
                     text-neutral-50 rounded-lg 
                     tracking-widest normal-case
                     " id="coupn-text" title="Copy to Clipboard" href="#cuponLocation">SELL200</a>
@@ -49,7 +49,7 @@
             <div class="flex justify-center items-center mt-4 md:hidden">
                 <h3 class="text-2xl font-medium mr-4">Use Promo Code</h3>
                 <a class="btn bg-primaryBtnClor
-                     hover:bg-primaryBtnClor text-xl
+                     hover:bg-primaryBtnClor text-base xl:text-xl
                     text-neutral-50 rounded-lg 
                     tracking-widest normal-case
                     " id="coupnText2" title="Copy to Clipboard" href="#cuponLocation">SELL200</a>
@@ -93,7 +93,7 @@
                             </div>
 
                             <h2 class="card-title">K. Accessories</h2>
-                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                            <p class="text-base xl:text-xl font-normal"><span>39.00 TK</span></p>
                         </div>
                     </div>
 
@@ -114,7 +114,7 @@
                             </div>
 
                             <h2 class="card-title">K. Accessories</h2>
-                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                            <p class="text-base xl:text-xl font-normal"><span>39.00 TK</span></p>
                         </div>
                     </div>
 
@@ -135,7 +135,7 @@
                             </div>
 
                             <h2 class="card-title">K. Accessories</h2>
-                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                            <p class="text-base xl:text-xl font-normal"><span>39.00 TK</span></p>
                         </div>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
                             </div>
 
                             <h2 class="card-title">K. Accessories</h2>
-                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                            <p class="text-base xl:text-xl font-normal"><span>39.00 TK</span></p>
                         </div>
                     </div>
 
@@ -190,7 +190,7 @@
                             </div>
 
                             <h2 class="card-title">K. Accessories</h2>
-                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                            <p class="text-base xl:text-xl font-normal"><span>39.00 TK</span></p>
                         </div>
                     </div>
 
@@ -213,7 +213,7 @@
                             </div>
 
                             <h2 class="card-title">K. Accessories</h2>
-                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                            <p class="text-base xl:text-xl font-normal"><span>39.00 TK</span></p>
                         </div>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                             </div>
 
                             <h2 class="card-title">K. Accessories</h2>
-                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                            <p class="text-base xl:text-xl font-normal"><span>39.00 TK</span></p>
                         </div>
                     </div>
 
@@ -266,7 +266,7 @@
                             </div>
 
                             <h2 class="card-title">K. Accessories</h2>
-                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                            <p class="text-base xl:text-xl font-normal"><span>39.00 TK</span></p>
                         </div>
                     </div>
 
@@ -287,7 +287,7 @@
                                 <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor" />
                             </div>
                             <h2 class="card-title">K. Accessories</h2>
-                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                            <p class="text-base xl:text-xl font-normal"><span>39.00 TK</span></p>
                         </div>
                     </div>
                 </div>
@@ -299,14 +299,14 @@
                 <div class="bg-whiteColor p-6 rounded-lg">
                     <h3 class="text-2xl font-medium mb-5">Have coupon?</h3>
                     <div class="text-center lg:w-80  ">
-                        <input class="text-xl p-2 border border-borderColor
+                        <input class="text-base xl:text-xl p-2 border border-r-0 border-borderColor
                         focus:outline-none font-normal w-48 lg:w-56 
                         rounded-l-lg -ml-4" placeholder="Coupon code" type="text" id="coupon-code">
                         <input class="capitalize
                         btn rounded-l-none border
                         hover:bg-primaryBtnClor
                         border-primaryBtnClor 
-                        text-xl font-semibold -ml-2 
+                        text-base xl:text-xl font-semibold -ml-2 
                         bg-primaryBtnClor 
                         text-whiteColor rounded-r-lg" id="copunApplyBtn" type="button" value="Apply">
                     </div>
@@ -331,7 +331,7 @@
                         hover:bg-primaryBtnClor
                         text-neutral-50 rounded-lg 
                         tracking-widest px-16 mt-6 
-                        text-xl capitalize " id="purchasBtn">
+                        text-base xl:text-xl capitalize " id="purchasBtn">
                             Make Purchase
                         </label>
 
@@ -394,14 +394,14 @@
 
             </div>
             <div class="flex items-center flex-col ">
-                <h2 class="text-5xl font-bold pt-10">Congratulations</h2>
-                <p class="py-4 text-xl font-normal">Your Purchase the product</p>
+                <h2 class="sm:text-5xl text-3xl font-bold pt-10">Congratulations</h2>
+                <p class="py-4 text-base xl:text-xl font-normal">Your Purchase the product</p>
             </div>
             <div class="modal-action justify-center">
                 <label for="my_modal_6" id="gotHome" class="
                 btn bg-primaryBtnClor 
                 hover:bg-primaryBtnClor
-                text-neutral-50 text-xl 
+                text-neutral-50 text-base xl:text-xl 
                 rounded-lg tracking-widest 
                 capitalize">Go Home</label>
             </div>
@@ -411,7 +411,7 @@
 
 
 
-
+    
 
 
 
