responsive text size

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         items-center py-20 text-primaryTextColor
         ">
             <div class="text-center">
-                <h4 class="text-fevrFontSize font-medium">---SALE FEVER---</h4>
+                <h4 class="text-3xl md:text-fevrFontSize font-medium">---SALE FEVER---</h4>
                 <h2 class="lg:text-disoundFontSize
                 text-5xl font-bold sm:my-16
                 2xl:max-w-discountSectioWidth 
